--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <br><span class="i-am">I am</span>
                         <br><span class="frinze">Frinze</span>
                 </h2>
-                <p id="title-description">I design websites and create cool backend stuff. I am always eager to learn and create new things everyday</p>
+                <p id="title-description">Passionate web developer on a journey to unlock the web's potential, one line of code at a time. 🌐💻🚀</p>
             </section>
         </div>
 
@@ -38,7 +38,7 @@
                 <img src="mysql.png">
             </div>
             <div class="bio">
-                <h1>I craft inspiring digital experiences through development and design that connect with people</h1>
+                <h1>My ultimate goal is to become a well-rounded full-stack web developer, capable of bringing innovative web solutions to life.</h1>
             </div>
         </div>
         
