--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <div class="home" id="home">
-            <img id="profile" src="profile.png">
+            <img id="profile" src="/public/profile.png">
             <section class="main-description">
                 <h2 id="title"> 
                     <span class="hi">Hi,</span> 
@@ -32,10 +32,10 @@
 
         <div class="about-phase-one" id="about-phase-one">
             <div class="tech-stack">
-                <img src="html-5.png">
-                <img src="css-3.png">
-                <img src="js.png">
-                <img src="mysql.png">
+                <img src="/public/html-5.png">
+                <img src="/public/css-3.png">
+                <img src="/public/js.png">
+                <img src="/public/mysql.png">
             </div>
             <div class="bio">
                 <h1>My ultimate goal is to become a well-rounded full-stack web developer, capable of bringing innovative web solutions to life.</h1>
@@ -45,7 +45,7 @@
         <div class="about-phase-two" id="about-phase-two">
             <h1>About Me</h1>
             <div class="frinze-about">
-                <img id="frinze-about-pic" src="/pic/frinzepark.jpg">
+                <img id="frinze-about-pic" src="/public/frinzepark.jpg">
                 <div class="frinze-description">
                     <h1>A brief intro, who am I?</h1>
                     <p>
@@ -76,13 +76,13 @@
             </div>
             
             <div class="project1">
-                <a id="fitnesschamp" href="https://frinzeworkspace.github.io/Fitness-Champ/" target="_blank"><img class="project1-preview" src="fitnessChamp.JPG"></a>
+                <a id="fitnesschamp" href="https://frinzeworkspace.github.io/Fitness-Champ/" target="_blank"><img class="project1-preview" src="/public/fitnessChamp.JPG"></a>
                 <div class="project1-description">
                     <h1>Fitness <br>Champ</h1>
                     <p>Start your Fintess Journey with us at <br>fitnesschamp.com</p>
                     <div class="project1-tech-stack">
-                        <img src="html-black.png">
-                        <img src="css-3-black.png">
+                        <img src="/public/html-black.png">
+                        <img src="/public/css-3-black.png">
                     </div>
                 </div>
             </div>
