--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
         <div class="about-phase-one" id="about-phase-one">
             <div class="tech-stack">
-                <img src="/public/html-5.png">
-                <img src="/public/css-3.png">
-                <img src="/public/js.png">
-                <img src="/public/mysql.png">
+                <img src="html-5.png">
+                <img src="css-3.png">
+                <img src="js.png">
+                <img src="mysql.png">
             </div>
             <div class="bio">
                 <h1>My ultimate goal is to become a well-rounded full-stack web developer, capable of bringing innovative web solutions to life.</h1>
@@ -45,7 +45,7 @@
         <div class="about-phase-two" id="about-phase-two">
             <h1>About Me</h1>
             <div class="frinze-about">
-                <img id="frinze-about-pic" src="/public/frinzepark.jpg">
+                <img id="frinze-about-pic" src="frinzepark.jpg">
                 <div class="frinze-description">
                     <h1>A brief intro, who am I?</h1>
                     <p>
@@ -81,8 +81,8 @@
                     <h1>Fitness <br>Champ</h1>
                     <p>Start your Fintess Journey with us at <br>fitnesschamp.com</p>
                     <div class="project1-tech-stack">
-                        <img src="/public/html-black.png">
-                        <img src="/public/css-3-black.png">
+                        <img src="html-black.png">
+                        <img src="css-3-black.png">
                     </div>
                 </div>
             </div>
