--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <div class="home" id="home">
-            <img id="profile" src="/public/profile.png">
+            <img id="profile" src="/profile.png">
             <section class="main-description">
                 <h2 id="title"> 
                     <span class="hi">Hi,</span> 
