--- a/index.html
+++ b/index.html
@@ -56,7 +56,31 @@
                         Being exposed in technology, I am interested in computer science, design, and digital marketing. 
                         <br>
                         <br>
-                        
+                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practice. I hope that I could learn more languages, libraries and frameworks. 
+                        <br>
+                        <br>
+                        Soon I hope I will get a job that could expand my knowledge and continue my dreams
+                        <br>
+                        <br>
+                    </p>
+                    <p class="certifications">
+                        My Certifications:
+                        <br>
+                        <br>
+                        <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc">Git Essensials Training</a>
+                        <br>
+                        LinkedIn Learning
+                        <br>
+                        <br>
+                        <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures"> JavaScript & Algorithm Structures</a>
+                        <br>
+                        freecodecamp
+                        <br>
+                        <br>
+                        <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design"> Reponsive Web Design</a>
+                        <br>
+                        freecodecamp
+                        <br>
                     </p>    
                 </div>
             </div>
@@ -72,9 +96,10 @@
                     <li>MY PROJECTS</li>
                     <li>MY PROJECTS</li>
                     <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
                 </ul>
             </div>
-            
             <div class="project1">
                 <a id="fitnesschamp" href="https://frinzeworkspace.github.io/Fitness-Champ/" target="_blank"><img class="project1-preview" src="fitnessChamp.JPG"></a>
                 <div class="project1-description">
