--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                     <h1>A brief intro, who am I?</h1>
                     <p>
                         <br>
-                        I am a simple student in St. Clare College of Caloocan. 
+                        <br>
+                        I am a simple student at St. Clare College of Caloocan, 
+                        <br>
+                        I major Computer Science and passionate about Web Development.
                         <br>
                         <br>
                         Being exposed in technology, I am interested in computer science, design, and digital marketing. 
