--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         Being exposed in technology, I am interested in computer science, design, and digital marketing. 
                         <br>
                         <br>
-                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practice. I hope that I could learn more languages, libraries and frameworks. 
+                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practices. I hope that I could learn more languages, libraries and frameworks. 
                         <br>
                         <br>
                         Soon I hope I will get a job that could expand my knowledge and continue my dreams
