Update About Credentials

--- a/index.html
+++ b/index.html
@@ -59,32 +59,49 @@
                         Being exposed in technology, I am interested in computer science, design, and digital marketing. 
                         <br>
                         <br>
-                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practices. I hope that I could learn more languages, libraries and frameworks. 
+                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practice. I hope that I could learn more languages, libraries and frameworks. 
                         <br>
                         <br>
                         Soon I hope I will get a job that could expand my knowledge and continue my dreams
                         <br>
                         <br>
                     </p>
-                    <p class="certifications">
-                        My Certifications:
-                        <br>
-                        <br>
-                        <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc">Git Essensials Training</a>
-                        <br>
-                        LinkedIn Learning
-                        <br>
-                        <br>
-                        <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures"> JavaScript & Algorithm Structures</a>
-                        <br>
-                        freecodecamp
-                        <br>
-                        <br>
-                        <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design"> Reponsive Web Design</a>
-                        <br>
-                        freecodecamp
-                        <br>
-                    </p>    
+                    <div class="certifications">
+                        <p>
+                            My Certifications:
+                            <br>
+                            <br>
+                        </p>
+
+                        <div class="certifications-credentials">
+                            <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc" target="_blank"><img class="cert-icons" src="linkedin-logo.png"></a>
+                            <p>
+                                <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc" target="_blank">Git Essensials Training</a>
+                                <br>
+                                LinkedIn Learning
+                            </p>
+                        </div>
+
+                        <div class="certifications-credentials">
+                            <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures" target="_blank"><img class="cert-icons" src="freecodeCamp.png"></a>
+                            <p>
+                                <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures" target="_blank"> JavaScript & Algorithm Structures</a>
+                                <br>
+                                freecodecamp
+                            </p>
+                        </div>
+
+                        <div class="certifications-credentials">
+                            <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design" target="_blank"><img class="cert-icons" src="freecodeCamp.png"></a> 
+                            <p>
+                                <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design" target="_blank">Reponsive Web Design</a>
+                                <br>
+                                freecodecamp
+                            </p>
+                        </div>
+
+                    </div>    
+
                 </div>
             </div>
         </div>
