--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         Being exposed in technology, I am interested in computer science, design, and digital marketing. 
                         <br>
                         <br>
-                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practice. I hope that I could learn more languages, libraries and frameworks. 
+                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practices. I hope that I could learn more languages, libraries and frameworks. 
                         <br>
                         <br>
-                        Soon I hope I will get a job that could expand my knowledge and continue my dreams
+                        Soon I hope I will get a job that could expand my knowledge and continue my dreams.
                         <br>
                         <br>
                     </p>
@@ -131,6 +131,19 @@
                     </div>
                 </div>
             </div>
+            <div class="my-project-wrapper">
+                <ul>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                    <li>MY PROJECTS</li>
+                </ul>
+            </div>
         </div>
 
         <div class="contacts" id="contacts">
@@ -166,7 +179,8 @@
         <p>Made with <3</p>
     </footer>
 
-    
+    <div class="cursor-dot" data-cursor-dot></div>
+    <div class="cursor-outlines" data-cursor-outlines></div>
 </body>
 <script src="main.js "></script>
 </html>
