Update Arrow Key

--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
     </main>
 
     <footer class="footer">
-        <p>All Rights Reserved</p>
-        <p>@Frinze Matabalan</p> 
-        <p>Made with <3</p>
+        <a href="#"><img id="arrow-up" src="Up_arrow_white.svg.png"></a>
+        <div class="footer-notes">
+            <p>All Rights Reserved</p>
+            <p>@Frinze Matabalan</p> 
+            <p>Made with <3</p> 
+        </div>
     </footer>
-
-    <div class="cursor-dot" data-cursor-dot></div>
-    <div class="cursor-outlines" data-cursor-outlines></div>
 </body>
 <script src="main.js "></script>
 </html>
