--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </h2>
                 <p id="title-description">Passionate web developer on a journey to unlock the web's potential, one line of code at a time. 🌐💻🚀</p>
             </section>
+            <div id="bg-particles"></div>
         </div>
 
         <div class="about-phase-one" id="about-phase-one">
@@ -181,6 +182,9 @@
             <p>Made with <3</p> 
         </div>
     </footer>
+    <script type="text/JavaScript" src="particles.min.js"></script>
+    <script type="text/JavaScript" src="custom.js"></script>
+    <script src="main.js"></script>
+
 </body>
-<script src="main.js "></script>
 </html>
