--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frinze.dev</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="frinze-dev-icon.png">
 </head>
 <body>
     <header class="header">
@@ -19,7 +20,7 @@
 
     <main>
         <div class="home" id="home">
-            <img id="profile" src="profile.png">
+            <img id="profile" src="public/profile.png">
             <section class="main-description">
                 <h2 id="title"> 
                     <span class="hi">Hi,</span> 
@@ -33,10 +34,10 @@
 
         <div class="about-phase-one" id="about-phase-one">
             <div class="tech-stack">
-                <img src="html-5.png">
-                <img src="css-3.png">
-                <img src="js.png">
-                <img src="mysql.png">
+                <img src="public/html-5.png">
+                <img src="public/css-3.png">
+                <img src="public/js.png">
+                <img src="public/mysql.png">
             </div>
             <div class="bio">
                 <h1>My ultimate goal is to become a well-rounded full-stack web developer, capable of bringing innovative web solutions to life.</h1>
@@ -46,7 +47,7 @@
         <div class="about-phase-two" id="about-phase-two">
             <h1>About Me</h1>
             <div class="frinze-about">
-                <img id="frinze-about-pic" src="frinzepark.jpg">
+                <img id="frinze-about-pic" src="public/frinzepark.jpg">
                 <div class="frinze-description">
                     <h1>A brief intro, who am I?</h1>
                     <p>
@@ -60,10 +61,10 @@
                         Being exposed in technology, I am interested in computer science, design, and digital marketing. 
                         <br>
                         <br>
-                        Although I am a complete beginner at web development, I am eager to learn more and pursue what are the best coding practices. I hope that I could learn more languages, libraries and frameworks. 
+                        Although I am a complete beginner at web development, I am eager to learn more and pursue what is the best coding practices. I hope that I could learn more languages, libraries and frameworks. 
                         <br>
                         <br>
-                        Soon I'm hoping for a job that could expand my knowledge and continue my dreams to be a decent web developer.
+                        Soon I hope I will get a job that could expand my knowledge and continue my dreams :)
                         <br>
                         <br>
                     </p>
@@ -75,7 +76,7 @@
                         </p>
 
                         <div class="certifications-credentials">
-                            <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc" target="_blank"><img class="cert-icons" src="linkedin-logo.png"></a>
+                            <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc" target="_blank"><img class="cert-icons" src="public/linkedin-logo.png"></a>
                             <p>
                                 <a href="https://www.linkedin.com/learning/certificates/3ce1d01e00da828452484ab5bb04af13f87bb2fceef216c108d0b672a96365cc" target="_blank">Git Essensials Training</a>
                                 <br>
@@ -84,7 +85,7 @@
                         </div>
 
                         <div class="certifications-credentials">
-                            <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures" target="_blank"><img class="cert-icons" src="freecodeCamp.png"></a>
+                            <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures" target="_blank"><img class="cert-icons" src="public/freecodeCamp.png"></a>
                             <p>
                                 <a href="https://www.freecodecamp.org/certification/frinze/javascript-algorithms-and-data-structures" target="_blank"> JavaScript & Algorithm Structures</a>
                                 <br>
@@ -93,7 +94,7 @@
                         </div>
 
                         <div class="certifications-credentials">
-                            <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design" target="_blank"><img class="cert-icons" src="freecodeCamp.png"></a> 
+                            <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design" target="_blank"><img class="cert-icons" src="public/freecodeCamp.png"></a> 
                             <p>
                                 <a href="https://www.freecodecamp.org/certification/frinze/responsive-web-design" target="_blank">Reponsive Web Design</a>
                                 <br>
@@ -122,13 +123,13 @@
                 </ul>
             </div>
             <div class="project1">
-                <a id="fitnesschamp" href="https://frinzeworkspace.github.io/Fitness-Champ/" target="_blank"><img class="project1-preview" src="fitnessChamp.JPG"></a>
+                <a id="fitnesschamp" href="https://frinzeworkspace.github.io/Fitness-Champ/" target="_blank"><img class="project1-preview" src="public/fitnessChamp.JPG"></a>
                 <div class="project1-description">
                     <h1>Fitness <br>Champ</h1>
                     <p>Start your Fintess Journey with us at <br>fitnesschamp.com</p>
                     <div class="project1-tech-stack">
-                        <img src="html-black.png">
-                        <img src="css-3-black.png">
+                        <img src="public/html-black.png">
+                        <img src="public/css-3-black.png">
                     </div>
                 </div>
             </div>
@@ -175,16 +176,13 @@
     </main>
 
     <footer class="footer">
-        <a href="#"><img id="arrow-up" src="Up_arrow_white.svg.png"></a>
+        <a href="#"><img id="arrow-up" src="public/Up_arrow_white.svg.png"></a>
         <div class="footer-notes">
             <p>All Rights Reserved</p>
             <p>@Frinze Matabalan</p> 
             <p>Made with <3</p> 
         </div>
     </footer>
-    <script type="text/JavaScript" src="particles.min.js"></script>
-    <script type="text/JavaScript" src="custom.js"></script>
-    <script src="main.js"></script>
-
 </body>
+<script src="main.js "></script>
 </html>
