--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
             <p>Made with <3</p> 
         </div>
     </footer>
+    <script type="text/JavaScript" src="particles.min.js"></script>
+    <script type="text/JavaScript" src="custom.js"></script>
 </body>
 <script src="main.js "></script>
 </html>
